# fuelrod-backup

./: .backup  .backup.example  .gitignore  CLAUDE.md  README.md  poetry.toml  pyproject.toml  renovate.json
.github/workflows/: auto-approve.yml  build.yml  ci.yml  lint.yml  next-release-pr.yml  pr-auto-approve.yml  pr-checks.yml  pr-request-changes.yml  pr-to-develop.yml  release.yml  unit-test.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  CONFIGURATION.md  FEATURE_CHECKLIST.md  FEATURE_PLAN.md  FIX_CHECKLIST.md  MIGRATION_GUIDE.md
fuelrod_backup/: __init__.py  backup.py  cli.py  config.py  create.py  drop.py  gdrive_sync.py  n8n_backup.py  n8n_restore.py  prompt.py  restore.py  runner.py
fuelrod_backup/adapters/: __init__.py  base.py  mariadb.py  mssql.py  postgres.py
fuelrod_backup/migrate/: __init__.py  data.py  report.py  runner.py  schema.py  transform.py  types.py  validate.py  wizard.py
tests/: conftest.py  test_cleanup.py  test_config.py  test_migrate_report.py  test_migrate_runner.py  test_migrate_schema.py  test_migrate_transform.py  test_migrate_types.py  test_n8n_helpers.py  test_restore_execution.py  test_toc_parsing.py  test_validators.py
