[project]
name = "fuelrod-backup"
version = "2.1.0"
description = "Interactive backup and restore CLI for PostgreSQL, MariaDB, and MSSQL."
authors = [
    { name = "masgeek", email = "barsamms@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/masgeek/fuelrod-backup"
repository = "https://github.com/masgeek/fuelrod-backup"
documentation = "https://github.com/masgeek/fuelrod-backup#readme"
keywords = ["postgresql", "postgres", "mariadb", "mysql", "mssql", "backup", "restore", "docker", "cli", "devops"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

requires-python = ">=3.13"
dependencies = [
    "typer (>=0.24.1,<0.25.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "psycopg[binary] (>=3.1,<4.0)",
    "pymysql (>=1.1,<2.0)",
    "pymssql (>=2.3,<3.0)",
    "rclone-python (>=0.1.24,<0.2.0)"
]

[project.scripts]
fuelrod-backup = "fuelrod_backup.cli:app"
fr-bkp = "fuelrod_backup.cli:app"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.8,<0.16.0)"
]


[tool.poetry]
packages = [{ include = "fuelrod_backup" }]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S603",  # subprocess call — reviewed; list form is used throughout (no shell=True)
    "S607",  # partial executable path — docker/pg_dump/mysqldump are expected on PATH
]

[tool.ruff.lint.per-file-ignores]
# Test helpers may use assert directly
"tests/**" = ["S101"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
